<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LayoutEx-USI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world1">Hello world 1!</string>
    <string name="hello_world2">Hello world 2!</string>
    <string name="hello_world3">Hello world 3!</string>
    <string name="hello_world4">Hello world 4!</string>
    <string name="Click">Click</string>
    <string name="title_activity_linear_layout">LinearLayoutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_linear_layout_activity2">LinearLayoutActivity2</string>
    <string name="title_activity_layout_list">LayoutList</string>
    <string name="title_activity_absolute_layout">AbsoluteLayoutActivity</string>
    <string name="title_activity_table_layout">TableLayoutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_table_layout2">TableLayout2Activity</string>

    
    
</resources>