<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hw_lbl_height"
        android:background="#0F0"
        android:text="@string/hello_world1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="@dimen/hw_lbl_height"
        android:layout_gravity="center_vertical"
        android:background="#0FF"
        android:text="@string/hello_world2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="@dimen/hw_lbl_height"
        android:layout_gravity="center"
        android:background="#F0F"
        android:text="@string/hello_world3" />

    <Button
        android:id="@+id/fram_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/Click" 
        android:onClick="onClick"/>

</FrameLayout>