<?xml version="1.0" encoding="utf-8"?>


<!--
    Demonstrates using GridLayout to build the "Simple Form" from the
    LinearLayout and RelativeLayout demos.
-->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:columnCount="4"
    android:padding="10dip" >

    <TextView
        android:background="#a0a"
        android:text="@string/hello_world" />

    <EditText
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:background="#0aa"
        android:inputType="textEmailAddress" />
        

    <Button
        android:id="@+id/grid_btn1"
        android:layout_column="2"
        android:background="#a00"
        android:text="@string/hello_world2"
        android:onClick="onClick" />

    <Button
        android:layout_marginLeft="30dip"
        android:background="#aaa"
        android:text="@string/hello_world3"
        android:onClick="onClick" />

    
</GridLayout>