<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="100dp"
        android:background="@android:color/holo_green_light"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/hello_world1"
        android:textSize="@dimen/fz_18dp" />

    <TextView
        android:id="@+id/txt_2"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="100dp"
        android:layout_below="@+id/txt_1"
        android:background="@android:color/holo_blue_light"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/hello_world2"
        android:textSize="@dimen/fz_18dp" />

    <TextView
        android:id="@+id/txt_3"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="100dp"
        android:layout_toRightOf="@+id/txt_1"
        android:background="@android:color/holo_blue_light"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/hello_world3"
        android:textSize="@dimen/fz_18dp" />
    
        <TextView
        android:id="@+id/txt_4"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="100dp"
        android:layout_below="@+id/txt_3"
        android:layout_toRightOf="@+id/txt_2"
        android:background="@android:color/holo_green_light"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/hello_world4"
        android:textSize="@dimen/fz_18dp" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_2"
        android:layout_marginTop="76dp"
        android:text="@string/Click"
        android:onClick="onClick" />

</RelativeLayout>