<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LinearLayoutActivity" >

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="@dimen/hw_lbl_height"
        android:background="@android:color/holo_green_light"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/hello_world1"
        android:textSize="@dimen/fz_18dp" />

    <TextView
        android:id="@+id/txt_2"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="@dimen/hw_lbl_height"
        android:background="@android:color/holo_blue_light"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/hello_world2"
        android:textSize="@dimen/fz_18dp" />

    <TextView
        android:id="@+id/txt_3"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="@dimen/hw_lbl_height"
        android:background="@android:color/holo_blue_light"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/hello_world3"
        android:textSize="@dimen/fz_18dp" />

    <TextView
        android:id="@+id/txt_4"
        android:layout_width="@dimen/hw_lbl_width"
        android:layout_height="@dimen/hw_lbl_height"
        android:background="@android:color/holo_green_light"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/hello_world4"
        android:textSize="@dimen/fz_18dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_media_previous"
         android:onClick="onClick" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_media_next"
        android:onClick="onClick" />

</LinearLayout>